<resources>
    <string name="app_name">Tele Farmer</string>
    <string name="mobile_number">মোবাইল নম্বর</string>
    <string name="login">লগইন</string>
    <string name="profile_create">প্রোফাইল তৈরি করুন</string>
    <string name="login_sub">আপনার মোবাইল নম্বরটি এখানে প্রবেশ করুন,\nআমরা আপনার পরিচয় নিশ্চিত করার জন্য একটি OTP পাঠাব</string>
    <string name="otp">ওটিপি</string>
    <string name="please_type_the_four_digit_code"><![CDATA[ 4 সংখ্যার কোড পাঠানো\nহয়েছে <b>%1$s</b> number]]></string>
    <string name="submit">জমা দিন</string>
    <string name="back_to_home">হোম পেজ এ ফিরে যান</string>
    <string name="application_now">আবেদন করুন</string>
    <string name="cancel">বাতিল</string>
    <string name="no_internet">কোন ইন্টারনেট নেই</string>
    <string name="news">খবর</string>
    <string name="loan">ঋণ</string>
    <string name="all">সব</string>
    <string name="tips_n_tricks">টিপস এবং কৌশল</string>
    <string name="news_details">খবর বিস্তারিত</string>
    <string name="buy_pack">প্যাক কিনুন</string>
    <string name="upload">আপলোড করুন</string>
    <string name="images">ছবি</string>
    <string name="previous_consultation">পূর্ববর্তী পরামর্শ</string>
    <string name="previous_consultation_details">বিস্তারিত পরামর্শ</string>
    <string name="upload_image_for_diagnosis">রোগ নির্ণয়ের জন্য ছবি আপলোড করুন</string>
    <string name="tricks_tips">কৌশল এবং টিপস</string>
    <string name="today_agro_news">আজ এগ্রো নিউজ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valid_mobile_number">Enter valid mobile number</string>
    <string name="enter_otp">ওটিপি লিখুন</string>
    <string name="profile">প্রোফাইল</string>
    <string name="save">সংরক্ষণ</string>
    <string name="create">ক্রিট করুন</string>
    <string name="name">নাম</string>
    <string name="crop">শষ্য</string>
    <string name="amount_of_land">জমির পরিমাণ</string>
    <string name="per_acre">প্রতি একর</string>
    <string name="nid_font">জাতীয় পরিচয়পত্রের সামনের দিকে আপলোড করুন</string>
    <string name="nid_back">জাতীয় পরিচয়পত্রের পেছনের অংশ আপলোড করুন</string>
    <string name="nid_back_front">জাতীয় পরিচয়পত্রের সামনের এবং পেছনের অংশ আপলোড করুন</string>
    <string name="type_your_name">আপনার  নাম লিখুন </string>
    <string name="phone">ফোন</string>
    <string name="type_your_phone_number">আপনার ফোন নম্বর লিখুন</string>
    <string name="location">অবস্থান</string>
    <string name="select_your_location">আপনার অবস্থান নির্বাচন করুন</string>
    <string name="select_crop_type">ফসলের ধরন</string>
    <string name="active_pack">সক্রিয় প্যাক</string>
    <string name="buy_now">ক্রয় করুন </string>
    <string name="expiry_date">মেয়াদ শেষ হওয়ার তারিখ</string>
    <string name="expiry">মেয়াদ শেষ</string>

    <string name="are_you_sure_want_to_log_out">আপনি লগ আউট করতে চান?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>


    <string name="pack_params"><![CDATA[<font color="#40CF96"><small>৳</small><big>%s</big></font><small>/%s</small>]]></string>
    <string name="view_all">সবগুলো দেখুন</string>
    <!--    <string name="view_all">আরো দেখুন</string>-->
    <string name="careline">কেয়ারলাইন</string>
    <string name="no_previous_consultations_found">আপনি কোনো পূর্ববর্তী পরামর্শ ছিল না</string>
    <string name="loading">লোড হচ্ছে..</string>
    <string name="weather">আবহাওয়া</string>
    <string name="pic_delete_mez">আপনি কি নিশ্চিত আপনি এই ছবিটি মুছে ফেলতে চান?</string>


    <string name="loan_section_title">লোনের পরিমাণ জানতে শষ্য ও জমির পরিমান নির্বাচন করুন</string>
    <string name="your_application_has_been_successfully">আপনার  আবেদনটি সফল হয়েছে খুব শীঘ্র্ই আমাদের প্রতিনিধি আপনার সাথে যোগাযোগ করবে ।</string>
    <string name="search">অনুসন্ধান করুন..</string>

    <string name="button_takePicture">ছবি তোলা</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.theroyalsoft.telefarmer.fileprovider</string>
    <string name="live_chat">লাইভ চ্যাট</string>
    <string name="video_call">ভিডিও কল</string>
    <string name="audio_call">অডিও কল</string>

</resources>