<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.view.fragments.profile.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="-30dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_lay"
        app:srcCompat="@drawable/profile_cover" />

    <include
        android:id="@+id/tool_bar_lay"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="-70dp"
        android:elevation="@dimen/_10sdp"
        android:padding="@dimen/_1sdp"
        android:scaleType="fitXY"
        app:layout_constraintCircleRadius="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView5"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@drawable/img_news_two"
        app:strokeColor="@color/app_color"
        app:strokeWidth="@dimen/_1sdp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/camera"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/_submit_btn_bg"
        android:tint="@color/app_green"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
        app:srcCompat="@drawable/_camera_alt_" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/_submit_btn_bg"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile">

        <!-- Name Layout -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/_submit_btn_bg"
            android:backgroundTint="@color/light_white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:drawableStart="@drawable/user"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/name"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:lines="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/type_your_name"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--  Phone Number -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/_submit_btn_bg"
            android:backgroundTint="@color/light_white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_name">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:drawableStart="@drawable/call"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/phone"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:lines="1"
                android:enabled="false"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/type_your_phone_number"
                android:inputType="phone"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Your Location -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/_submit_btn_bg"
            android:backgroundTint="@color/light_white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_phone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:drawableStart="@drawable/profile_location"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/location"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:lines="1"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/_arrow_down_"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/select_your_location"
                android:paddingEnd="@dimen/_5sdp"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- My Pack -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_pack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/_submit_btn_bg"
            android:backgroundTint="@color/light_white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_location">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:drawableStart="@drawable/profile_pack"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/active_pack"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/et_active_pack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/active_pack"
                android:paddingEnd="@dimen/_5sdp"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--  My Expiry -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_expiry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/_submit_btn_bg"
            android:backgroundTint="@color/light_white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_location">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:drawableStart="@drawable/profile_date"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/dob"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/et_expiry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:lines="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/date_of_birth"
                android:paddingEnd="@dimen/_5sdp"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_11sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/_submit_btn_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_save_" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>