<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_alpha"
    tools:context=".ui.view.activity.otp.OTPActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginEnd="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_top_img" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon_green" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/otp"
        android:textColor="@color/app_green"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/please_type_the_four_digit_code"
        android:textColor="@color/login_hint_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />


    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/tv_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:textColor="@color/app_color"
        app:bar_height="2dp"
        app:height="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_subtitle"
        app:length="4"
        app:otp_box_background_active="@drawable/active_box_otp"
        app:otp_box_background_error="@drawable/error_box_otp"
        app:otp_box_background_inactive="@drawable/mobile_input_bg"
        app:otp_box_background_success="@drawable/success_box_otp"
        app:otp_text_size="@dimen/_14ssp"
        app:width="@dimen/_35sdp" />

    <TextView
        android:id="@+id/tv_set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:tag="resend"
        android:text="Resend 19:59"
        android:textColor="@color/login_hint_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_otp"
        app:layout_constraintStart_toStartOf="@+id/tv_otp"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/_submit_btn_bg"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_time" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_otp"
        app:layout_constraintStart_toStartOf="@+id/tv_otp"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_grass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:layout_marginEnd="-30dp"
        android:rotationY="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_login_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>